--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="ps-2">
+<div class="container">
   <a [routerLink]="['./login']" *ngIf="!isUserValid">Login</a>&nbsp;
   <a [routerLink]="['./hello']">Menu</a>&nbsp;
   <a [routerLink]="['./custord']">Customer Order</a>
