--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,76 @@
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a [routerLink]="['./hello']" class="nav-link">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['./custord']" class="nav-link">Customer Order</a>
+        </li>
+
+        <!--<li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>-->
+        <li class="nav-item">
+          <span *ngIf="isUserValid" class="nav-item"
+            >Total Items: {{ totMenuCount }} Total Amount: {{ totAmount }}</span
+          >
+        </li>
+      </ul>
+      <li class="nav-item list-unstyled me-2">
+        <button
+          type="button"
+          [routerLink]="['./login']"
+          class="nav-link"
+          *ngIf="!isUserValid"
+        >
+          Login
+        </button>
+      </li>
+      <li class="nav-item list-unstyled me-2">
+        <button
+          (click)="onLogOut()"
+          type="button"
+          class="nav-link"
+          *ngIf="isUserValid"
+        >
+          Log Out
+        </button>
+      </li>
+      <form class="d-flex" role="search">
+        <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+
 <div class="container">
-  <a [routerLink]="['./login']" *ngIf="!isUserValid">Login</a>&nbsp;
-  <a [routerLink]="['./hello']">Menu</a>&nbsp;
-  <a [routerLink]="['./custord']">Customer Order</a>
-  <a href="" (click)="onLogOut()" type="button" class="ps-2" *ngIf="isUserValid"
-    >Log Out</a
-  >
-  <span style="padding-left:10px" *ngIf="isUserValid"
-    >Total Items: {{ totMenuCount }} Total Amount: {{ totAmount }}</span
-  >
   <router-outlet></router-outlet>
 </div>
