--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,57 +1,54 @@
-<form
-  [formGroup]="form"
-  (ngSubmit)="validateUser()"
-  *ngIf="!isUserValid"
-  class="form-group"
->
-  <div class="ps-2">
-    <label for="username">Username</label>
-    <input
-      formControlName="username"
-      id="username"
-      type="text"
-      class="form-control w-75"
-    />
-  </div>
-  <div
-    *ngIf="
-      form.controls['username'].invalid &&
-      (form.controls['username'].touched || form.controls['username'].dirty)
-    "
-    class="ps-2"
-  >
-    <div class="ps-2" *ngIf="form.controls['username'].errors.required">
-      User Name required
+<div class="container-fluid">
+  <form [formGroup]="form" (ngSubmit)="validateUser()" *ngIf="!isUserValid">
+    <div class="form-outline ps-2">
+      <label for="username">Username</label>
+      <input
+        formControlName="username"
+        id="username"
+        type="text"
+        class="form-control"
+      />
     </div>
-  </div>
+    <div
+      *ngIf="
+        form.controls['username'].invalid &&
+        (form.controls['username'].touched || form.controls['username'].dirty)
+      "
+      class="ps-2"
+    >
+      <div class="ps-2" *ngIf="form.controls['username'].errors.required">
+        User Name required
+      </div>
+    </div>
 
-  <div class="form-group w-75 ps-2">
-    <label for="password">Password</label>
-    <input
-      formControlName="password"
-      id="password"
-      type="text"
-      class="form-control"
-    />
-  </div>
-  <div
-    *ngIf="
-      form.controls['password'].invalid &&
-      (form.controls['password'].touched || form.controls['password'].dirty)
-    "
-    class="ps-2"
-  >
-    <div class="ps-2" *ngIf="form.controls['password'].errors.required">
-      Password required
+    <div class="form-outline ps-2">
+      <label for="password">Password</label>
+      <input
+        formControlName="password"
+        id="password"
+        type="text"
+        class="form-control"
+      />
     </div>
+    <div
+      *ngIf="
+        form.controls['password'].invalid &&
+        (form.controls['password'].touched || form.controls['password'].dirty)
+      "
+      class="ps-2"
+    >
+      <div class="ps-2" *ngIf="form.controls['password'].errors.required">
+        Password required
+      </div>
+    </div>
+    <div class="ps-2 pt-2">
+      <button class="btn btn-primary" type="submit" *ngIf="form.valid">
+        Log In
+      </button>
+    </div>
+  </form>
+  <div *ngIf="isUserValid">
+    <h3>Welcome! You are succesfully logged in.</h3>
+    <button (click)="onLogOut()" class="btn btn-primary">Log Out</button>
   </div>
-  <div class="ps-2 pt-2">
-    <button class="btn btn-primary" type="submit" *ngIf="form.valid">
-      Log In
-    </button>
-  </div>
-</form>
-<div *ngIf="isUserValid">
-  <h3>Welcome! You are succesfully logged in.</h3>
-  <button (click)="onLogOut()" class="btn btn-primary">Log Out</button>
 </div>
