--- a/src/app/customer/customerorder.component.html
+++ b/src/app/customer/customerorder.component.html
@@ -32,7 +32,7 @@
     />
   </div>
   <div></div>
-  <div>
+  <div class="mt-2">
     <button type="submit">Submit</button>
   </div>
 </form>
@@ -41,23 +41,31 @@
   class="table table-success table-striped mt-2"
 >
   <tr>
-    <td style="padding-right:10px; border:1px solid black">Menu Name</td>
-    <td style="padding-right:10px;border:1px solid black">Price</td>
-    <td style="padding-right:10px;border:1px solid black">Quantity</td>
-    <td style="padding-right:10px;border:1px solid black">Amount</td>
+    <td style="padding-right:10px; border:1px solid black" class="fw-bold">
+      Menu Name
+    </td>
+    <td style="padding-right:10px;border:1px solid black" class="fw-bold">
+      Price
+    </td>
+    <td style="padding-right:10px;border:1px solid black" class="fw-bold">
+      Quantity
+    </td>
+    <td style="padding-right:10px;border:1px solid black" class="fw-bold">
+      Amount
+    </td>
   </tr>
   <tr *ngFor="let ord of AllOrders">
     <td style="padding-right:10px; border:1px solid black">
       {{ ord.menuName }}
     </td>
     <td style="padding-right:10px; border:1px solid black">
-      {{ ord.menuPrice }}
+      <i class="bi bi-currency-rupee"></i>{{ ord.menuPrice }}
     </td>
     <td style="padding-right:10px; border:1px solid black">
       {{ ord.quantity }}
     </td>
     <td style="padding-right:10px; border:1px solid black">
-      {{ ord.totAmount }}
+      <i class="bi bi-currency-rupee"></i>{{ ord.totAmount }}
     </td>
   </tr>
 </table>
