--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,8 +60,15 @@
           type="search"
           placeholder="Search"
           aria-label="Search"
+          #search
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button
+          class="btn btn-outline-success"
+          type="button"
+          (click)="SearchMenu(search.value)"
+        >
+          Search
+        </button>
       </form>
     </div>
   </div>
