--- a/src/app/hello.component.html
+++ b/src/app/hello.component.html
@@ -1,5 +1,5 @@
 <h1>{{ LoginMessage }}</h1>
-<div class="container">
+<div class="container-fluid">
   <div class="row row-cols-3 row-cols-md-3">
     <div *ngFor="let item of MenuItems">
       <div class="col mb-1">
