--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,24 +9,19 @@
       aria-controls="navbarSupportedContent"
       aria-expanded="false"
       aria-label="Toggle navigation"
+			style="background-color:indianred"
     >
-      <span class="navbar-toggler-icon"></span>
+		<span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a
-            [routerLink]="['./hello']"
-            class="nav-link"
-            style="color:yellow;font-weight:bold"
+          <a [routerLink]="['./hello']" class="nav-link" style="color:yellow;"
             >Menu</a
           >
         </li>
         <li class="nav-item">
-          <a
-            [routerLink]="['./custord']"
-            class="nav-link"
-            style="color:yellow;font-weight:bold"
+          <a [routerLink]="['./custord']" class="nav-link" style="color:yellow;"
             >Customer Order</a
           >
         </li>
@@ -38,7 +33,7 @@
           [routerLink]="['./login']"
           class="btn btn-primary nav-link"
           *ngIf="!isUserValid"
-          style="color:yellow;font-weight:bold"
+          style="color:yellow;"
         >
           Login
         </button>
@@ -49,7 +44,7 @@
           type="button"
           class="btn btn-primary nav-link"
           *ngIf="isUserValid"
-          style="color:yellow;font-weight:bold"
+          style="color:yellow;"
         >
           Log Out
         </button>
@@ -67,6 +62,7 @@
         class="btn bg-success"
         type="button"
         (click)="SearchMenu(search.value)"
+        style="color:white;"
       >
         Search
       </button>
