--- a/src/app/hello.component.html
+++ b/src/app/hello.component.html
@@ -19,13 +19,11 @@
               [value]="item"
               (change)="onCheckBoxSelect($event, item)"
               [checked]="isChecked(item)"
-              [hidden]="!LoginStatus"
-              class="form-check-input"
+              class="form-check-input col-xs-3 col-md-3"
             />
             <button
               (click)="addItem(item)"
-              [hidden]="!LoginStatus"
-              class="ms-2"
+              class="ms-2 col-xs-1 col-md-1"
             >
               <span>
                 <i class="bi bi-plus-square"></i>
@@ -35,11 +33,13 @@
               type="text"
               value=""
               [(ngModel)]="item.itemQty"
-              [hidden]="!LoginStatus"
-              style="width:65%;"
+              class="col-xs-1 col-sm-3 col-md-9"
             />
-            <button (click)="removeItem(item)" [hidden]="!LoginStatus">
-              <span>
+            <button
+              (click)="removeItem(item)"
+              class="col-xs-1 col-md-1"
+            >
+              <span class="col-xs-1 col-md-1">
                 <i class="bi bi-file-minus"></i>
               </span>
             </button>
