--- a/src/app/hello.component.html
+++ b/src/app/hello.component.html
@@ -4,7 +4,7 @@
 >
   <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3">
     <div *ngFor="let item of MenuItems">
-      <div class="col mb-1">
+      <div class="col mb-1 mt-2">
         <div class="card h-100" style="background-color:darkgreen">
           <div class="card-body" style="color:white;font-weight:bold">
             <h5 class="card-title fs-sm fs-md">{{ item.menuName }}</h5>
