--- a/src/app/customer/customerorder.component.html
+++ b/src/app/customer/customerorder.component.html
@@ -1,39 +1,63 @@
 <form
   [formGroup]="OrderForm"
-  (ngSubmit)="submitForm()"
+  (ngSubmit)="submitForm(OrderForm.value)"
   *ngIf="IsUserValid"
   class="form-group"
 >
   <div>
-    <label for="custName">First Name: </label>
+    <label for="firstName">First Name: </label>
     <input
       type="text"
-      formControlName="firstname"
+      formControlName="firstName"
       value=""
       class="form-control"
     />
   </div>
   <div>
-    <label for="custName">Last Name: </label>
+    <label for="lastName">Last Name: </label>
     <input
       type="text"
-      formControlName="lastname"
+      formControlName="lastName"
       value=""
       class="form-control"
     />
   </div>
   <div>
-    <label for="ordDate">Order Date:</label>
+    <label for="mobileNumber">Mobile Number: </label>
     <input
       type="text"
-      formControlName="ordDate"
+      formControlName="mobileNumber"
       value=""
       class="form-control"
     />
   </div>
-  <div></div>
+  <div>
+    <label for="emailId">Email Id: </label>
+    <input
+      type="text"
+      formControlName="emailId"
+      value=""
+      class="form-control"
+    />
+  </div>
+  <div>
+    <label for="address">Address: </label>
+    <input
+      type="text"
+      formControlName="address"
+      value=""
+      class="form-control"
+    />
+  </div>
   <div class="mt-2">
-    <button type="submit">Submit</button>
+    <button
+      type="submit"
+      *ngIf="!OrderForm.invalid"
+      class="btn bg-success"
+      style="color:white;"
+    >
+      Submit
+    </button>
   </div>
 </form>
 <table
@@ -69,6 +93,17 @@
     </td>
   </tr>
 </table>
+<div *ngIf="IsUserValid && AllOrders && AllOrders.length > 0">
+  <button
+    type="button"
+    class="btn bg-success"
+    style="color:white"
+    (click)="previewOrder()"
+    *ngIf="!OrderForm.invalid"
+  >
+    Preview Order
+  </button>
+</div>
 <div *ngIf="!IsUserValid">
   <span>No Orders. Please login to place orders.</span>
 </div>
